# wasm-rust

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md
site/: index.html  index.js  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
site/lib/: prime.ts
src/: lib.rs  prime.rs
