[package]
name = "wasm-rust"
version = "0.1.0"
authors = ["PrettyWood <em.jolibois@gmail.com>"]
description = "Trying out things with WebAssembly + Rust"
repository = "https://github.com/PrettyWood/wasm-rust"
license = "MIT"

edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
